# A-Gazebo-Simulator-for-Continuum-Parallel-Robots

./: .gitmodules  README.md
Federico's_files/Codes/ContinuumRobotExamples-master/ContinuumRobotExamples-master/01_Statics/00_Solving_A_Rod_IVP/MATLAB/: RodIVP.m
Federico's_files/Codes/ContinuumRobotExamples-master/ContinuumRobotExamples-master/01_Statics/01_Solving_A_Rod_BVP/MATLAB/: RodBVP.m
Federico's_files/Codes/ContinuumRobotExamples-master/ContinuumRobotExamples-master/01_Statics/02_CSG_Inverse_Kinematics/MATLAB/: CSG_Inverse_Kinematics.m
Federico's_files/Codes/Shooting_RFRFR/FGSP/: CheckDiffeq.m  ForwardShootingRFRFR.m  PlanarKirchhoffRodOde.m
Federico's_files/Codes/Shooting_RFRFR/IGSP/: InverseShootingRFRFR.m  PlanarKirchhoffRodOde.m  PlotRFRFR.m
Previous_works/Federico's_Codes/Shooting_RFRFR/FGSP/: PlotRFRFR.m  mainForwardRFRFRshooting.m
Previous_works/Federico's_Codes/Shooting_RFRFR/IGSP/: mainInverseRFRFRshooting.m
build-sand_box-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  cpr_sandbox.cbp  elliptic
continuum_sim/: CMakeLists.txt  Cosserat_Rod_IVP.pro  package.xml
continuum_sim/include/continuum_sim/: commonmath.h  convexoptimization.h  eigenmatrixtypes.h  numericalintegration.h  rod.h  simpleplotting.h
continuum_sim/src/: algilib_lm.cpp  dual_arm_planar (another copy).cpp  dual_arm_planar (copy).cpp  dual_arm_planar.cpp  elliptic_odeint.cpp  elliptic_odeint_eigen.cpp  igm.cpp  rod_bvp.cpp  rod_igm.cpp  rod_igm_2D.cpp
dual_links_robot_gazebo/: CMakeLists.txt  package.xml
dual_links_robot_gazebo/include/dual_links_robot_gazebo/: commonmath.h  convexoptimization.h  numericaldifferentiation.h  numericalintegration.h  physics_core.h  physics_plugin.h  shape_listener.h  shape_msg.h  shape_publisher.h  visual_plugin.h
dual_links_robot_gazebo/launch/: distal_plate.sdf.xacro  dual_link_robot.launch  joint.sdf.xacro  joint1.sdf.xacro  joint2.sdf.xacro  spawn.launch  spawn_joint.launch  unit_testing.launch
dual_links_robot_gazebo/src/: physics_core.cpp  physics_core.cpp.autosave  physics_node.cpp  physics_plugin.cpp  shape_listener.cpp  shape_publisher.cpp  visual_plugin.cpp
rod_bvp_gazebo/: CMakeLists.txt  package.xml
rod_bvp_gazebo/include/rod_bvp_gazebo/: commonmath.h  convexoptimization.h  eigenmatrixtypes.h  numericaldifferentiation.h  numericalintegration.h  physics_core.h  shape_listener.h  shape_msg.h  shape_publisher.h  visual_plugin.h
rod_bvp_gazebo/launch/: bvp.launch  distal_plate.sdf.xacro  joint.sdf.xacro  mass_spring.sdf.xacro  spawn.launch  spawn_joint.launch
rod_bvp_gazebo/src/: physics_core.cpp  physics_node.cpp  shape_listener.cpp  shape_publisher.cpp  visual_plugin.cpp
rod_ivp_gazebo/: CMakeLists.txt  package.xml
rod_ivp_gazebo/include/rod_ivp_gazebo/: numericalintegration.h  physics_core.h  shape_listener.h  shape_msg.h  shape_publisher.h  visual_plugin.h
rod_ivp_gazebo/launch/: mass_spring.sdf.xacro  spawn.launch
rod_ivp_gazebo/src/: physics_core.cpp  physics_node.cpp  shape_listener.cpp  shape_publisher.cpp  visual_plugin.cpp
sand_box/: CMakeLists.txt  cpr_sandbox.pro  elliptic_functions.cpp
